feat: change swagger structure and use interfaces for swagger
