# storage/api-docs/api-docs.json
@@ -7,7 +7,115 @@
     },
     "paths": {
         "/": {},
-        "/api/v1/payment": {
+        "/api/v1/currencies": {
+            "get": {
+                "tags": [
+                    "Currency"
+                ],
+                "summary": "summary",
+                "description": "get list of Currency",
+                "operationId": "getListCurrency",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "201": {
+                        "description": "Successful operation"
+                    },
+                    "202": {
+                        "description": "Successful operation"
+                    },
+                    "204": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Currency"
+                ],
+                "summary": "currency",
+                "description": "store currency",
+                "operationId": "storeCurrency",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "key",
+                                    "symbol",
+                                    "iso_code"
+                                ],
+                                "properties": {
+                                    "key": {
+                                        "type": "text"
+                                    },
+                                    "symbol": {
+                                        "type": "text"
+                                    },
+                                    "iso_code": {
+                                        "type": "text"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        },
+                        "application/json": {
+                            "schema": {}
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "201": {
+                        "description": "Successful operation"
+                    },
+                    "202": {
+                        "description": "Successful operation"
+                    },
+                    "204": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/payments": {
             "get": {
                 "tags": [
                     "Payment"
@@ -60,13 +168,13 @@
                             "schema": {
                                 "required": [
                                     "amount",
-                                    "currency"
+                                    "currency_key"
                                 ],
                                 "properties": {
                                     "amount": {
                                         "type": "text"
                                     },
-                                    "currency": {
+                                    "currency_key": {
                                         "type": "text"
                                     }
                                 },
@@ -111,7 +219,7 @@
                 ]
             }
         },
-        "/api/v1/payment/{id}": {
+        "/api/v1/payments/{id}": {
             "get": {
                 "tags": [
                     "Payment"
@@ -163,7 +271,7 @@
                 ]
             }
         },
-        "/api/v1/payment/{id}/reject": {
+        "/api/v1/payments/{id}/reject": {
             "patch": {
                 "tags": [
                     "Payment"
@@ -215,7 +323,7 @@
                 ]
             }
         },
-        "/api/v1/payment/{id}/approve": {
+        "/api/v1/payments/{id}/approve": {
             "patch": {
                 "tags": [
                     "Payment"
